--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "JsProChat",
-  "version": "1.0.1dev",
-  "main": "src/server.js",
-  "scripts": {
-    "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
-    "build": "env NODE_ENV=production webpack --config webpack.config.js",
-    "start": "node dist/server.js",
-    "dev": "node src/server.js"
-  },
-  "repository": "git@github.com:Severenit/JsProChat.git",
   "author": "Zar Zakharov <severenit@gmail.com>",
-  "license": "MIT",
+  "dependencies": {
+    "@hapi/hapi": "^20.1.5",
+    "@hapi/inert": "^6.0.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "socket.io": "^4.1.3"
+  },
   "devDependencies": {
     "fs": "^0.0.1-security",
     "nodemon": "^2.0.7",
@@ -20,12 +17,15 @@
     "webpack-cli": "^3.3.12",
     "webpack-node-externals": "2.5.2"
   },
-  "dependencies": {
-    "@hapi/hapi": "^20.1.5",
-    "@hapi/inert": "^6.0.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "http": "^0.0.1-security",
-    "socket.io": "^4.1.3"
-  }
+  "license": "MIT",
+  "main": "src/server.js",
+  "name": "js-pro-chat-server",
+  "repository": "git@github.com:Severenit/JsProChat.git",
+  "scripts": {
+    "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
+    "build": "env NODE_ENV=production webpack --config webpack.config.js",
+    "start": "node dist/server.js",
+    "dev": "node src/server.js"
+  },
+  "version": "1.0.1-dev"
 }
